                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.1
  *) [TS-991] Fixed race / stall condition for WCCP during restart.

  *) [TS-985] ts/ts.h uses C++ comments, which are technically not C.

  *) [TS-928] Compile problem in TsErrataUtil on FreeBSD 8.

  *) [TS-973] Eliminate proxy.config.http.verbose_via_str.

  *) [TS-747] Add a new option, proxy.config.ssl.compression, to turn
   SSL compression on / off. This currently only works with OpenSSL
   v1.0.0 and later.

  *) [TS-963] Change the way ip_allow is parsed to be consistent with
   earlier versions (first match). Added default IPv6 allow. Added
   regression tests for the underlying IpMap class.

  *) [TS-948] Don't reload or load a broken remap.config.

  *) [TS-824] Range requests that result in cache refresh give 200 status
   response with full contents. Review and suggestions for improvements
   by Charlie Gero.

  *) [TS-964] Add 64-bit integer plugin APIs for HTTP headers.

  *) [TS-932] Fix m_pending_event == NULL crash in LogCollationClientSM.cc
   Author: weijin

  *) [TS-830] Better error when there are CLI permission problems, or
   other problems preventing operation. Author: AdunGaos.

  *) [TS-979] Found a few places where we can segfault with strlcpy.

  *) [TS-938] Fix VIA to avoid loopback address. For Solaris only IPv4
   is supported.

  *) [TS-945] Convert transparent forward requests to server style when
     forwarding to a parent proxy. Contributed by Yossi Gottlieb.

  *) [TS-926] IPv6 conversion of iocore.

  *) [TS-967] This is a simplified version of Arno Toell's patch which does
   the same: Check if any -O options where given, and if so, use those, if
   not, use our default -O3.

  *) [TS-957] remove IE6 from the white list of ae_ua filter

  *) [TS-955] Fix the logging regression testing.

  *) [TS-962] typo of key name in logstats.cc. Author: Nick Berry.

  *) [TS-958] Fix a few valgrind memory check errors.